# threejs_figures

./: README.md
common/: build.js  package.json
common/csrc/: Makefile
common/jscommon/: basicWireframe.js  index.js  initGeometry.js  sceneFromSurface.js  sceneRenderer.js  squareWireframeGeometry.js  windowResize.js  zRotate.js
common/jssrc/: basicWireframe.js  index.js  sceneCamera.js  sceneFromSurface.js  sceneRenderer.js  setupControls.js  zRotate.js  (+1 more)
surfaces/ellipticParaboloidWireframe/: Cargo.toml  Makefile  alias.js  ellipticParaboloidWireframe.html  ellipticParaboloidWireframe.js  ellipticParaboloidWireframeModule.js  ellipticParaboloidWireframeWebAssembly.js  generate_mesh.c  main.js  main.wasm  paraboloid.h  rotate_mesh.c
surfaces/ellipticParaboloidWireframe/csrc/: alias.js  generate_indices.c  generate_mesh.c  get_buffer.c  get_index_buffer.c  get_mesh_buffer.c  globals.c  main.cpp  paraboloid.h  postjs.js  rotate_mesh.c  set_rotation_angle.c
surfaces/ellipticParaboloidWireframe/gosrc/: bindings.go  ellipticParaboloidWireframeModule.js  generate_indices.go  generate_mesh.go  get_index_buffer.go  get_mesh_buffer.go  globals.go  go.mod  main.go  rotate_mesh.go  set_rotation_angle.go
surfaces/ellipticParaboloidWireframe/jssrc/: animate.js  generateIndices.js  generateMesh.js  globals.js  rotateMesh.js  setRotationAngle.js  setupGeometry.js
surfaces/ellipticParaboloidWireframe/rustsrc/: ellipticParaboloidWireframeModule.js  generate_indices.rs  generate_mesh.rs  get_index_buffer.rs  get_mesh_buffer.rs  lib.rs  rotate_mesh.rs  set_rotation_angle.rs
(+197 files in other folders)
