[package]
name = "paraboloid"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/ryanmaguire/threejs_figures"
description = "Rust code for three.js animations."

[lib]
crate-type = ["cdylib"]
path = "rustsrc/lib.rs"

[dependencies]
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
